# serializer version: 1
# name: test_states
  set({
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Outlet 1 Power',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.outlet_1_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '50',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Outlet 2 Power',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.outlet_2_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 5',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_5',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_1',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'dogs',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_2',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 3',
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_3',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
  })
# ---
# name: test_states_with_subentry
  set({
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Outlet 1 Power',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.outlet_1_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '50',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Outlet 2 Power',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.outlet_2_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 5',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_5',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Sensor test',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.sensor_test',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '15',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 1',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_1',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 2',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'dogs',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_2',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Statistics issues Issue 3',
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.statistics_issues_issue_3',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
  })
# ---
